@@ -83,23 +83,23 @@
     <cia.project.versions.spring>5.3.39</cia.project.versions.spring>
     <cia.project.versions.spring.security>5.8.16</cia.project.versions.spring.security>
     <cia.project.versions.spring.data>2.7.18</cia.project.versions.spring.data>
-    <cia.project.versions.aws>1.12.782</cia.project.versions.aws>
+    <cia.project.versions.aws>1.12.791</cia.project.versions.aws>
     <cia.project.versions.aspectj>1.9.24</cia.project.versions.aspectj>
     <cia.project.versions.javassist>3.30.2-GA</cia.project.versions.javassist>
-    <cia.project.versions.javers>7.8.0</cia.project.versions.javers>
+    <cia.project.versions.javers>7.8.6</cia.project.versions.javers>
     <cia.project.versions.narayana>5.13.1.Final</cia.project.versions.narayana>
     <cia.project.versions.asm>9.8</cia.project.versions.asm>
     <cia.project.versions.cglib>3.3.0</cia.project.versions.cglib>
     <cia.project.versions.commons.collections>3.2.2</cia.project.versions.commons.collections>
-    <cia.project.versions.commonslang3>3.17.0</cia.project.versions.commonslang3>
+    <cia.project.versions.commonslang3>3.18.0</cia.project.versions.commonslang3>
     <cia.project.versions.commons.lang>2.6</cia.project.versions.commons.lang>
-    <cia.project.versions.commons.text>1.13.1</cia.project.versions.commons.text>
-    <cia.project.versions.commons.codec>1.18.0</cia.project.versions.commons.codec>
-    <cia.project.versions.bouncycastle>1.79</cia.project.versions.bouncycastle>
+    <cia.project.versions.commons.text>1.14.0</cia.project.versions.commons.text>
+    <cia.project.versions.commons.codec>1.19.0</cia.project.versions.commons.codec>
+    <cia.project.versions.bouncycastle>1.82</cia.project.versions.bouncycastle>
     <cia.project.versions.slf4j>2.0.17</cia.project.versions.slf4j>
     <cia.project.versions.logback>1.5.18</cia.project.versions.logback>
     <cia.project.versions.ehcache.spring.annotations>1.2.0</cia.project.versions.ehcache.spring.annotations>
-    <cia.project.versions.drools>10.0.0</cia.project.versions.drools>
+    <cia.project.versions.drools>10.1.0</cia.project.versions.drools>
     <cia.project.versions.hibernate.search>6.2.4.Final</cia.project.versions.hibernate.search>
     <cia.project.versions.hibernate.lucene>8.11.4</cia.project.versions.hibernate.lucene>
     <cia.project.versions.hibernate>5.6.15.Final</cia.project.versions.hibernate>
@@ -108,12 +108,12 @@
     <cia.project.versions.hibernate.jpa2>1.0.2.Final</cia.project.versions.hibernate.jpa2>
     <cia.project.versions.hibernate.validator>6.2.1.Final</cia.project.versions.hibernate.validator>
     <cia.project.versions.hibernate.validator>6.2.5.Final</cia.project.versions.hibernate.validator>
-    <cia.project.versions.bytebuddy>1.17.5</cia.project.versions.bytebuddy>
+    <cia.project.versions.bytebuddy>1.17.7</cia.project.versions.bytebuddy>
     <cia.project.versions.h2>2.3.232</cia.project.versions.h2>
-    <cia.project.versions.postgresql>42.7.5</cia.project.versions.postgresql>
+    <cia.project.versions.postgresql>42.7.7</cia.project.versions.postgresql>
     <cia.project.versions.ehcache>2.10.5</cia.project.versions.ehcache>
     <cia.project.versions.poi>5.4.1</cia.project.versions.poi>
-    <cia.project.versions.pdfbox>3.0.4</cia.project.versions.pdfbox>
+    <cia.project.versions.pdfbox>3.0.5</cia.project.versions.pdfbox>
     <cia.project.versions.quartz>2.1.5</cia.project.versions.quartz>
     <cia.project.versions.ant>1.10.15</cia.project.versions.ant>
     <cia.project.versions.junit>4.13.2</cia.project.versions.junit>
@@ -136,18 +136,18 @@
     <cia.project.versions.jaxb.xjc.runtime>2.3.9</cia.project.versions.jaxb.xjc.runtime>
     <cia.project.versions.jaxb2.plugin>0.14.0</cia.project.versions.jaxb2.plugin>
     <cia.project.versions.jaxb2.fluent.api>3.0</cia.project.versions.jaxb2.fluent.api>
-    <cia.project.versions.jakarta.activation>2.1.3</cia.project.versions.jakarta.activation>
+    <cia.project.versions.jakarta.activation>2.1.4</cia.project.versions.jakarta.activation>
     <cia.project.versions.com.sun.activation>2.0.1</cia.project.versions.com.sun.activation>
     <cia.project.versions.activation>1.1.1</cia.project.versions.activation>
     <cia.project.versions.maven>3.8.4</cia.project.versions.maven>
     <cia.project.versions.httpclient>4.5.14</cia.project.versions.httpclient>
-    <cia.project.versions.guava>33.4.6-jre</cia.project.versions.guava>
-    <cia.project.versions.jackson>2.18.3</cia.project.versions.jackson>
-    <cia.project.versions.netty>4.2.0.Final</cia.project.versions.netty>
+    <cia.project.versions.guava>33.4.8-jre</cia.project.versions.guava>
+    <cia.project.versions.jackson>2.20.0</cia.project.versions.jackson>
+    <cia.project.versions.netty>4.2.6.Final</cia.project.versions.netty>
     <cia.project.versions.xerces>2.12.2</cia.project.versions.xerces>
-    <cia.project.versions.commons.compress>1.27.1</cia.project.versions.commons.compress>
+    <cia.project.versions.commons.compress>1.28.0</cia.project.versions.commons.compress>
     <cia.project.versions.xmlapis>1.4.01</cia.project.versions.xmlapis>
-    <cia.project.versions.jetty>10.0.25</cia.project.versions.jetty>
+    <cia.project.versions.jetty>10.0.26</cia.project.versions.jetty>
     <cia.project.versions.servlet.api>4.0.1</cia.project.versions.servlet.api>
     <cia.project.versions.javamelody>1.99.3</cia.project.versions.javamelody>
     <cia.project.versions.vaadin>8.14.4</cia.project.versions.vaadin>
@@ -158,7 +158,7 @@
     <jacoco.version>0.8.13</jacoco.version>
     <compiler.plugin.version>3.14.0</compiler.plugin.version>
     <cia.project.versions.compiler.plexus.java>1.5.0</cia.project.versions.compiler.plexus.java>
-    <surefire.version>3.5.3</surefire.version>
+    <surefire.version>3.5.4</surefire.version>
     <jdk.src.version>21</jdk.src.version>
     <jdk.target.version>21</jdk.target.version>
     <javadoc.src.version>21</javadoc.src.version>
@@ -199,7 +199,7 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-bom</artifactId>
-        <version>2.24.3</version>
+        <version>2.25.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -211,12 +211,12 @@
       <dependency>
         <groupId>com.squareup.okio</groupId>
         <artifactId>okio</artifactId>
-        <version>3.11.0</version>
+        <version>3.16.0</version>
       </dependency>
       <dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-core</artifactId>
-        <version>3.7.5</version>
+        <version>3.7.11</version>
       </dependency>
       <dependency>
         <groupId>com.sun.istack</groupId>
@@ -236,7 +236,7 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.18.0</version>
+        <version>2.20.0</version>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
@@ -261,12 +261,12 @@
       <dependency>
         <groupId>commons-net</groupId>
         <artifactId>commons-net</artifactId>
-        <version>3.11.1</version>
+        <version>3.12.0</version>
       </dependency>
       <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
-        <version>20250107</version>
+        <version>20250517</version>
       </dependency>
       <dependency>
         <groupId>com.thoughtworks.xstream</groupId>
@@ -336,7 +336,7 @@
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>1.10.1</version>
+        <version>1.11.0</version>
       </dependency>
       <dependency>
         <groupId>org.jvnet.jaxb2_commons</groupId>
@@ -447,12 +447,12 @@
       <dependency>
         <groupId>org.jboss</groupId>
         <artifactId>jandex</artifactId>
-        <version>3.2.6</version>
+        <version>3.3.1</version>
       </dependency>
       <dependency>
         <groupId>io.smallrye</groupId>
         <artifactId>jandex</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.0</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate.validator</groupId>
@@ -671,17 +671,17 @@
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>xmlgraphics-commons</artifactId>
-        <version>2.10</version>
+        <version>2.11</version>
       </dependency>
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-all</artifactId>
-        <version>1.18</version>
+        <version>1.19</version>
       </dependency>
       <dependency>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-core</artifactId>
-        <version>4.31.1</version>
+        <version>4.33.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -754,7 +754,7 @@
         <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
-          <version>12.1.1</version>
+          <version>12.1.3</version>
           <configuration>
             <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
           </configuration>
@@ -898,7 +898,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
-          <version>2.18.0</version>
+          <version>2.19.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -923,7 +923,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-ear-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.4.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -940,7 +940,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.4.1</version>
+          <version>3.5.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -960,7 +960,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.11.2</version>
+          <version>3.11.3</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1088,7 +1088,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
-          <version>3.2.7</version>
+          <version>3.2.8</version>
         </plugin>
         <plugin>
           <groupId>org.bsc.maven</groupId>
@@ -1098,7 +1098,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>3.6.0</version>
+          <version>3.6.1</version>
         </plugin>
         <plugin>
           <groupId>com.github.ekryd.sortpom</groupId>
@@ -1113,7 +1113,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.5.0</version>
+          <version>3.6.1</version>
           <dependencies>
             <dependency>
               <groupId>org.codehaus.mojo</groupId>
@@ -1125,7 +1125,7 @@
         <plugin>
           <groupId>org.liquibase</groupId>
           <artifactId>liquibase-maven-plugin</artifactId>
-          <version>4.31.1</version>
+          <version>4.33.0</version>
         </plugin>
         <plugin>
           <groupId>de.thetaphi</groupId>
@@ -1450,6 +1450,22 @@
       </properties>
     </profile>
     <profile>
+      <id>java25</id>
+      <activation>
+        <jdk>25</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>-XX:+EnableDynamicAgentLoading --add-exports
+          java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
+          java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <jdk.src.version>25</jdk.src.version>
+        <jdk.target.version>25</jdk.target.version>
+        <forbiddenapis.skip>false</forbiddenapis.skip>
+      </properties>
+    </profile>
+    <profile>
       <id>release-site</id>
       <activation>
         <property>
@@ -1499,7 +1515,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.11.2</version>
+            <version>3.11.3</version>
             <inherited>true</inherited>
             <configuration>
               <source>${javadoc.src.version}</source>
@@ -1574,7 +1590,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>versions-maven-plugin</artifactId>
-            <version>2.18.0</version>
+            <version>2.19.0</version>
             <inherited>true</inherited>
             <configuration>
               <allowSnapshots>true</allowSnapshots>
